@@ -817,7 +817,7 @@ include/
 <h2>2.12 <a name="DirStructNetUtils">netutils</a></h2>
 <p>
   This directory contains most of the network applications.
-  Some of these are original with NuttX (like tftpc) and others were leveraged from the uIP-1.0 apps directory.
+  Some of these are original with NuttX (like tftpc and dhcpd) and others were leveraged from the uIP-1.0 apps directory.
   As the uIP apps/README says, these applications &quot;are not all heavily tested.&quot;
 </p>
 <ul><pre>
